@@ -277,6 +277,7 @@ wrt. session structure. Examples:
 
   isabelle imports -I -a
   isabelle imports -U -a
+  isabelle imports -U -i -a
   isabelle imports -M -a -d '~~/src/Benchmarks'
 
 * Isabelle/Scala: the SQL module supports access to relational
